SudokuSolver/.cabal-sandbox/logs/ghc-8.6.5/unix-time-0.4.7-59qhjWOWGlPC1MPvUtkKAw.log
cabal: Entering directory '/tmp/cabal-tmp-538/unix-time-0.4.7'
Configuring unix-time-0.4.7...
checking for gcc... /usr/bin/x86_64-linux-gnu-gcc
checking whether the C compiler works... yes
checking for C compiler default output file name... a.out
checking for suffix of executables... 
checking whether we are cross compiling... no
checking for suffix of object files... o
checking whether we are using the GNU C compiler... yes
checking whether /usr/bin/x86_64-linux-gnu-gcc accepts -g... yes
checking for /usr/bin/x86_64-linux-gnu-gcc option to accept ISO C89... none needed
checking how to run the C preprocessor... /usr/bin/x86_64-linux-gnu-gcc -E
checking for grep that handles long lines and -e... /usr/bin/grep
checking for egrep... /usr/bin/grep -E
checking for ANSI C header files... yes
checking for sys/types.h... yes
checking for sys/stat.h... yes
checking for stdlib.h... yes
checking for string.h... yes
checking for memory.h... yes
checking for strings.h... yes
checking for inttypes.h... yes
checking for stdint.h... yes
checking for unistd.h... yes
checking xlocale.h usability... no
checking xlocale.h presence... no
checking for xlocale.h... no
checking for strptime_l... yes
checking for timegm... yes
checking for _mkgmtime... no
checking for _get_current_locale... no
checking for _create_locale... no
checking for strtol_l... yes
checking for strtoll_l... yes
checking for _isspace_l... no
checking for _isupper_l... no
checking for _isdigit_l... no
checking for _isblank_l... no
configure: creating ./config.status
config.status: creating cbits/config.h
Preprocessing library for unix-time-0.4.7..
Building library for unix-time-0.4.7..
[1 of 5] Compiling Data.UnixTime.Types ( dist/dist-sandbox-54b365cc/build/Data/UnixTime/Types.hs, dist/dist-sandbox-54b365cc/build/Data/UnixTime/Types.o )
[2 of 5] Compiling Data.UnixTime.Sys ( dist/dist-sandbox-54b365cc/build/Data/UnixTime/Sys.hs, dist/dist-sandbox-54b365cc/build/Data/UnixTime/Sys.o )
[3 of 5] Compiling Data.UnixTime.Diff ( Data/UnixTime/Diff.hs, dist/dist-sandbox-54b365cc/build/Data/UnixTime/Diff.o )
[4 of 5] Compiling Data.UnixTime.Conv ( Data/UnixTime/Conv.hs, dist/dist-sandbox-54b365cc/build/Data/UnixTime/Conv.o )

Data/UnixTime/Conv.hs:11:1: warning: [-Wunused-imports]
    The import of ‘Control.Applicative’ is redundant
      except perhaps to import instances from ‘Control.Applicative’
    To import instances alone, use: import Control.Applicative()
   |
11 | import Control.Applicative
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
[5 of 5] Compiling Data.UnixTime    ( Data/UnixTime.hs, dist/dist-sandbox-54b365cc/build/Data/UnixTime.o )
In file included from /usr/include/x86_64-linux-gnu/bits/libc-header-start.h:33,
                 from /usr/include/string.h:26,

                 from cbits/conv.c:15:0: error: 

/usr/include/features.h:187:3: error:
     warning: #warning "_BSD_SOURCE and _SVID_SOURCE are deprecated, use _DEFAULT_SOURCE" [-Wcpp]
      187 | # warning "_BSD_SOURCE and _SVID_SOURCE are deprecated, use _DEFAULT_SOURCE"
          |   ^~~~~~~
    |
187 | # warning "_BSD_SOURCE and _SVID_SOURCE are deprecated, use _DEFAULT_SOURCE"
    |   ^
In file included from /usr/include/x86_64-linux-gnu/bits/libc-header-start.h:33,
                 from /usr/include/string.h:26,

                 from cbits/conv.c:15:0: error: 

/usr/include/features.h:187:3: error:
     warning: #warning "_BSD_SOURCE and _SVID_SOURCE are deprecated, use _DEFAULT_SOURCE" [-Wcpp]
      187 | # warning "_BSD_SOURCE and _SVID_SOURCE are deprecated, use _DEFAULT_SOURCE"
          |   ^~~~~~~
    |
187 | # warning "_BSD_SOURCE and _SVID_SOURCE are deprecated, use _DEFAULT_SOURCE"
    |   ^
Installing library in /mnt/c/Users/n.nguyen/OneDrive/FP/Sudoku/.cabal-sandbox/lib/x86_64-linux-ghc-8.6.5/unix-time-0.4.7-59qhjWOWGlPC1MPvUtkKAw
cabal: Leaving directory '/tmp/cabal-tmp-538/unix-time-0.4.7'
